Added OnItemClickListener for the Pet's list. The list view does not have a listener for the breeds list
+ Minor refactorings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ListViewExample</string>
     <string name="petcare">PetCare</string>
+    <string name="switch_text">Switch</string>
 </resources>
